--- a/app/src/main/res/layout/fragment_recentcalls.xml
+++ b/app/src/main/res/layout/fragment_recentcalls.xml
@@ -60,8 +60,7 @@
                 <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_gravity="center"
-
+                    android:layout_gravity="center_horizontal|center_vertical"
                     android:gravity="center">
 
                     <TextView
@@ -71,23 +70,22 @@
                         android:padding="10dp"
                         android:text="আপনার কল লিস্টে কোন তথ্য নেই"
                         android:textColor="#aec3e3" />
-
                     <Button
                         android:id="@+id/new_call_fromRecent"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
 
-                        app:srcCompat="@drawable/profile_button_shape"
-                        android:gravity="center"
+                        android:background="@drawable/phone_submit_button_shape"
                         android:text="নতুন কল "
                         android:textColor="@color/colorPrimary"
-
+                        android:layout_marginTop="30dp"
                         android:layout_below="@+id/texttext"
                         android:layout_alignLeft="@+id/texttext"
                         android:layout_alignStart="@+id/texttext"
-                        android:layout_marginLeft="58dp"
-                        android:layout_marginStart="58dp"
-                        android:layout_marginTop="14dp" />
+                        android:layout_marginLeft="60dp"
+                        android:layout_marginStart="60dp" />
+
+
                 </RelativeLayout>
 
             </LinearLayout>
