--- a/app/src/main/res/layout/activity_chat_room.xml
+++ b/app/src/main/res/layout/activity_chat_room.xml
@@ -41,7 +41,7 @@
             android:id="@+id/jump_bottom"
             android:layout_width="wrap_content"
             android:layout_height="35dp"
-            app:srcCompat="@drawable/shape_jump_to_bottom"
+            android:background="@drawable/shape_jump_to_bottom"
             android:text="@string/jump_to_latest"
             android:textAllCaps="false"
             android:textColor="#FFF" />
@@ -81,7 +81,7 @@
                 android:layout_alignParentStart="true"
                 android:layout_centerVertical="true"
                 android:background="@android:color/transparent"
-                app:srcCompat="@drawable/emoji"
+
                 ads:layout_constraintLeft_toLeftOf="parent"
                 ads:layout_constraintBottom_toBottomOf="parent"
                 android:layout_marginBottom="8dp"
