--- a/app/src/main/res/layout/activity_edit_group.xml
+++ b/app/src/main/res/layout/activity_edit_group.xml
@@ -17,7 +17,10 @@
 
     <ScrollView
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent">
+        android:layout_height="fill_parent"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -31,7 +34,7 @@
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="10dp"
-            app:srcCompat="@drawable/hello1" />
+         />
 
         <TextView
             android:id="@+id/group_name_edit"
