--- a/app/src/main/res/layout/activity_new_group_details.xml
+++ b/app/src/main/res/layout/activity_new_group_details.xml
@@ -27,7 +27,7 @@
             android:layout_width="96dp"
             android:layout_height="96dp"
             android:layout_marginTop="44dp"
-            app:srcCompat="@drawable/user_pic"
+            android:background="@drawable/hello1"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true" />
 
