mars niche jan icon fixed, tap on edit box added for group chat and p2p

--- a/app/src/main/res/layout/activity_mars_live.xml
+++ b/app/src/main/res/layout/activity_mars_live.xml
@@ -83,7 +83,7 @@
                 android:id="@+id/jump_bottom"
                 android:layout_width="wrap_content"
                 android:layout_height="35dp"
-                app:srcCompat="@drawable/shape_jump_to_bottom"
+                android:background="@drawable/shape_jump_to_bottom"
                 android:text="@string/jump_to_latest"
                 android:textAllCaps="false"
                 android:textColor="#FFF" />
