--- a/app/src/main/res/layout/new_incoming.xml
+++ b/app/src/main/res/layout/new_incoming.xml
@@ -45,7 +45,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:text="কল আসছে..."
+            android:text="কল এসেছে..."
             android:textColor="#ffffff"
             android:textSize="18sp"
             android:textAllCaps="true"
