--- a/app/src/main/res/layout/activity_congratulations.xml
+++ b/app/src/main/res/layout/activity_congratulations.xml
@@ -63,7 +63,7 @@
         style="?android:attr/borderlessButtonStyle"
         android:textSize="18sp"
         android:textColor="#FFFFFF"
-        app:srcCompat="@drawable/profile_button_shape"
+        android:background="@drawable/profile_button_shape"
         android:text="প্রোফাইল ক্রিয়েট করুন"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
