--- a/app/src/main/res/layout/activity_user_profile_chat.xml
+++ b/app/src/main/res/layout/activity_user_profile_chat.xml
@@ -5,7 +5,26 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".activity.UserProfileActivity">
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="#ffffff"
+        app:titleTextColor="@color/colorPrimaryDark"
 
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
+
+
+            <ImageButton
+                android:layout_width="19dp"
+                android:layout_gravity="right"
+                android:id="@+id/editprofile"
+                android:layout_marginEnd="22dp"
+                android:visibility="gone"
+                android:layout_marginRight="22dp"
+                app:srcCompat="@drawable/ic_edit"
+                android:layout_height="19dp" />
+    </android.support.v7.widget.Toolbar>
     <View
         android:id="@+id/border13"
         android:layout_width="match_parent"
