--- a/app/src/main/res/layout/new_incoming.xml
+++ b/app/src/main/res/layout/new_incoming.xml
@@ -76,7 +76,7 @@
             android:layout_width="84dp"
             android:layout_height="84dp"
             android:layout_toRightOf="@id/declineButton"
-            android:background="@drawable/receive_call" />
+            android:background="@drawable/ic_receive_call" />
 
     </LinearLayout>
     <TextView
